[project]
name = "diffusion-policy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.12.0",
    "av>=16.1.0",
    "boto3>=1.42.41",
    "cffi>=2.0.0",
    "click>=8.3.1",
    "datasets>=2.2.1",
    "diffusers>=0.36.0",
    "dill>=0.4.1",
    "dm-control>=1.0.36",
    "einops>=0.8.2",
    "gym>=0.26.2",
    "h5py>=3.15.1",
    "hydra-core>=1.3.2",
    "imageio-ffmpeg>=0.6.0",
    "jax[cuda]>=0.5.3",
    "matplotlib>=3.10.8",
    "numba>=0.63.1",
    "numcodecs>=0.16.5",
    "numpy>=1.22.4,<2.0.0",
    "opencv-python>=4.10.0.84",
    "psutil>=7.2.2",
    "pygame>=2.6.1",
    "pymunk>=7.2.0",
    "r3m",
    "ray>=2.53.0",
    "robomimic>=0.3.0",
    "robosuite>=1.5.2",
    "scikit-image>=0.26.0",
    "scikit-video>=1.1.11",
    "scipy>=1.17.0",
    "shapely>=2.1.2",
    "tensorboard>=2.20.0",
    "tensorboardx>=2.6.4",
    "termcolor>=3.3.0",
    "threadpoolctl>=3.6.0",
    "torch==2.7.1",
    "tqdm>=4.67.3",
    "wandb>=0.24.1",
    "zarr>=3.1.5",
]

[tool.uv.sources]
r3m = { url = "https://github.com/facebookresearch/r3m/archive/b2334e726887fa0206962d7984c69c5fb09cceab.tar.gz" }
